# suxarray

./: .buildinfo  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  pyproject.toml  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
.github/: ISSUE_TEMPLATE.md
.github/workflows/: documentation.yaml  pr.yaml
_sources/: index.rst.txt  usage.rst.txt
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  installation.rst  make.bat
docs/notebooks/: example_read_schism_nc.ipynb  example_subset.ipynb
main/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  suxarray.conventions.html  suxarray.core.html  suxarray.grid.html  suxarray.html  suxarray.io.html  suxarray.subset.html  suxarray.utils.html  usage.html
main/.doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  readme.doctree  suxarray.core.doctree  (+7 more)
suxarray/: __init__.py  constants.py  helper.py  hvplot.py  suxarray.py  util_vtk.py
tests/: __init__.py  test_area.py  test_schismgrid_io.py  test_suxarray.py  test_util_vtk.py  testfixtures.py
(+43 files in other folders)
