[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suxarray"
version = "0.1.3"
description = "uxarray extension for SCHISM."
readme = "README.rst"
requires-python = ">=3.8,<3.13"
authors = [
    { name = "California Department of Water Resources", email = "knam@water.ca.gov" }
]
license = { file = "LICENSE" }
keywords = ["suxarray"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "uxarray==2025.4",
    "netcdf4",
    "shapely>=2.0",
    "Click>=7.0"
]

[project.optional-dependencies]
vtk = ["vtk"]

test = [
    "pytest>=3",
    "vtk"
]

[project.urls]
Homepage = "https://github.com/cadwrdeltamodeling/suxarray"

[tool.setuptools.packages.find]
include = ["suxarray", "suxarray.*"]

[project.scripts]
suxarray = "suxarray.cli:main"
